force-app/main/default/objects/Players__c/fields/AVG_Score__c.field-meta.xml
<CustomField>
    <fullName>AVG_Score__c</fullName>
    <formula>IF( Matches_Played__c &gt; 0, Total_Runs__c / Matches_Played__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>