force-app/main/default/objects/Players__c/fields/Balls_Faced__c.field-meta.xml
<CustomField>
    <fullName>Balls_Faced__c</fullName>
    <label>Balls Faced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>