force-app/main/default/objects/Players__c/fields/Batting_Style__c.field-meta.xml
<CustomField>
    <fullName>Batting_Style__c</fullName>
    <label>Batting Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right-handed</fullName>
            </value>
            <value>
                <fullName>left-handed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>