force-app/main/default/objects/Players__c/fields/Bowling_Style__c.field-meta.xml
<CustomField>
    <fullName>Bowling_Style__c</fullName>
    <label>Bowling Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right-Arm Fast</fullName>
            </value>
            <value>
                <fullName>Left-Arm Fast</fullName>
            </value>
            <value>
                <fullName>Right-Arm Medium</fullName>
            </value>
            <value>
                <fullName>Left-Arm Medium</fullName>
            </value>
            <value>
                <fullName>Right-Arm Spin</fullName>
            </value>
            <value>
                <fullName>Left-Arm Spin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>