force-app/main/default/objects/Players__c/fields/Catches__c.field-meta.xml
<CustomField>
    <fullName>Catches__c</fullName>
    <label>Catches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>