force-app/main/default/objects/Players__c/fields/Fours__c.field-meta.xml
<CustomField>
    <fullName>Fours__c</fullName>
    <label>Fours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>