force-app/main/default/objects/Players__c/fields/Match_Performance__c.field-meta.xml
<CustomField>
    <fullName>Match_Performance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Match Performance</label>
    <referenceTo>Match_Performance__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>