force-app/main/default/objects/Players__c/fields/Match_Performance_Name__c.field-meta.xml
<CustomField>
    <fullName>Match_Performance_Name__c</fullName>
    <label>Match Performance Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>