force-app/main/default/objects/Players__c/fields/Match_Result__c.field-meta.xml
<CustomField>
    <fullName>Match_Result__c</fullName>
    <label>Match Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WON</fullName>
            </value>
            <value>
                <fullName>LOST</fullName>
            </value>
            <value>
                <fullName>DRAW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>