force-app/main/default/objects/Players__c/fields/Matches_Played__c.field-meta.xml
<CustomField>
    <fullName>Matches_Played__c</fullName>
    <label>Matches Played</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>