force-app/main/default/objects/Players__c/fields/Number_of_100_s__c.field-meta.xml
<CustomField>
    <fullName>Number_of_100_s__c</fullName>
    <label>Number of 100&apos;s</label>
    <summaryFilterItems>
        <field>Match_Performance__c.Runs_Scored__c</field>
        <operation>greaterOrEqual</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Match_Performance__c.Runs_Scored__c</field>
        <operation>lessThan</operation>
        <value>200</value>
    </summaryFilterItems>
    <summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>