force-app/main/default/objects/Players__c/fields/Player_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_Name__c</fullName>
    <label>Player Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>