force-app/main/default/objects/Players__c/fields/Player_Number__c.field-meta.xml
<CustomField>
    <fullName>Player_Number__c</fullName>
    <label>Player Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>