force-app/main/default/objects/Players__c/fields/Player_Of_The_Match__c.field-meta.xml
<CustomField>
    <fullName>Player_Of_The_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Player Of The Match</label>
    <type>Checkbox</type>
</CustomField>