force-app/main/default/objects/Players__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>batsman</fullName>
            </value>
            <value>
                <fullName>bowler</fullName>
            </value>
            <value>
                <fullName>batsman&amp; wicket keeper</fullName>
            </value>
            <value>
                <fullName>all rounder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>