force-app/main/default/objects/Players__c/fields/Runs_Conceded__c.field-meta.xml
<CustomField>
    <fullName>Runs_Conceded__c</fullName>
    <label>Runs Conceded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>