force-app/main/default/objects/Players__c/fields/Sixes__c.field-meta.xml
<CustomField>
    <fullName>Sixes__c</fullName>
    <label>Sixes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>