force-app/main/default/objects/Players__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chennai Super Kings</fullName>
            </value>
            <value>
                <fullName>Mumbai Indians</fullName>
            </value>
            <value>
                <fullName>Royal Challengers Bengaluru</fullName>
            </value>
            <value>
                <fullName>Kolkata Knight Riders</fullName>
            </value>
            <value>
                <fullName>Sunrisers Hyderabad</fullName>
            </value>
            <value>
                <fullName>Rajasthan Royals</fullName>
            </value>
            <value>
                <fullName>Delhi Capitals</fullName>
            </value>
            <value>
                <fullName>Lucknow Super Giants</fullName>
            </value>
            <value>
                <fullName>Gujarat Titans</fullName>
            </value>
            <value>
                <fullName>Punjab Kings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>