force-app/main/default/objects/Players__c/fields/Total_4_s__c.field-meta.xml
<CustomField>
    <fullName>Total_4_s__c</fullName>
    <label>Total 4&apos;s</label>
    <summarizedField>Match_Performance__c.Fours__c</summarizedField>
    <summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>