force-app/main/default/objects/Players__c/fields/Total_Catches__c.field-meta.xml
<CustomField>
    <fullName>Total_Catches__c</fullName>
    <label>Total Catches</label>
    <summarizedField>Match_Performance__c.Catches__c</summarizedField>
    <summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>