force-app/main/default/objects/Players__c/fields/Total_Runs__c.field-meta.xml
<CustomField>
    <fullName>Total_Runs__c</fullName>
    <label>Total Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>