force-app/main/default/objects/Players__c/fields/Total_Stumpings__c.field-meta.xml
<CustomField>
    <fullName>Total_Stumpings__c</fullName>
    <label>Total Stumpings</label>
    <summarizedField>Match_Performance__c.Stumpings__c</summarizedField>
    <summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>